Add megaparsec dependency for parsing

--- a/lambda-hs.cabal
+++ b/lambda-hs.cabal
@@ -53,13 +53,14 @@ executable lambda-hs
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  other-modules:       AST
 
   -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
+  other-extensions:    OverloadedStrings
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.12 && <4.13
+                       , megaparsec
 
   -- Directories containing source files.
   hs-source-dirs:      src
