--- a/lambda-hs.cabal
+++ b/lambda-hs.cabal
@@ -54,6 +54,7 @@ executable lambda-hs
 
   -- Modules included in this executable, other than Main.
   other-modules:       AST
+                       , Parser
 
   -- LANGUAGE extensions used by modules in this package.
   other-extensions:    OverloadedStrings
