Add parser-combinators to parse expressions

--- a/lambda-hs.cabal
+++ b/lambda-hs.cabal
@@ -62,6 +62,7 @@ executable lambda-hs
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.12 && <4.13
                        , megaparsec
+                       , parser-combinators
 
   -- Directories containing source files.
   hs-source-dirs:      src
