--- a/lambda-hs.cabal
+++ b/lambda-hs.cabal
@@ -55,6 +55,7 @@ executable lambda-hs
   -- Modules included in this executable, other than Main.
   other-modules:       AST
                        , Parser
+                       , Eval
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensionss:
