--- a/lambda-hs.cabal
+++ b/lambda-hs.cabal
@@ -56,14 +56,17 @@ executable lambda-hs
   other-modules:       AST
                        , Parser
                        , Eval
+                       , Pretty
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensionss:
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.12 && <4.13
+                       , containers
                        , megaparsec
                        , parser-combinators
+                       , prettyprinter
 
   -- Directories containing source files.
   hs-source-dirs:      src
